[gd_scene load_steps=9 format=2]

[ext_resource path="res://Modules/Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Modules/Movement.tscn" type="PackedScene" id=3]
[ext_resource path="res://Blink.gdshader" type="Shader" id=4]
[ext_resource path="res://Enemies/LunchMan.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/flash_color = Color( 1, 0, 0, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Animation" id=2]
resource_name = "Damage"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Enemy" type="KinematicBody2D" groups=["Enemies"]]
z_index = 1
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )
type = "lunch"

[node name="Body" type="Area2D" parent="."]
scale = Vector2( 1.05, 1.05 )
collision_layer = 8
collision_mask = 23

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body"]
scale = Vector2( 1.05, 1.05 )
polygon = PoolVector2Array( -20.9524, -32.381, -3.80952, -24.7619, 14.2857, 1.90476, 34.2857, 6.66667, 36.1905, 15.2381, 32.381, 22.8571, 5.71429, 22.8571, 2.85714, 28.5714, -12.381, 32.381, -22.8571, 25.7143, -36.1905, -10.4762, -32.381, -23.8095, -28.5714, -8.57143, -15.2381, -14.2857, -25.7143, -29.5238 )

[node name="Stats" parent="." instance=ExtResource( 1 )]

[node name="Movement" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="CollisionTimer" type="Timer" parent="."]

[node name="TimedEffects" type="Node" parent="."]

[node name="Timer" type="Timer" parent="TimedEffects"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 1.05, 1.05 )
polygon = PoolVector2Array( -20.9524, -32.381, -3.80952, -24.7619, 14.2857, 1.90476, 34.2857, 6.66667, 36.1905, 15.2381, 32.381, 22.8571, 5.71429, 22.8571, 2.85714, 28.5714, -12.381, 32.381, -22.8571, 25.7143, -36.1905, -10.4762, -32.381, -23.8095, -28.5714, -8.57143, -15.2381, -14.2857, -25.7143, -29.5238 )

[connection signal="area_entered" from="Body" to="." method="_on_Body_area_entered"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
